--- a/index.html
+++ b/index.html
@@ -739,11 +739,339 @@
 	<!-- /.calculator -->
 	<section class="auto_card">
 		<div class="container">
-			
+			<h2 class="blue__title">
+				Автомобілі, доставлені ДЛЯ нашиХ
+				клієнтіВ
+			</h2>
+			<div class="auto-card-block">
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+				<div class="auto-card-prof">
+					<img src="static/img/index/4.png" alt="" class="photo_auto">
+					<div class="name_car">
+						FORD ESCAPE
+					</div>
+					<div class="price_car">
+						10 150 $
+					</div>
+					<div class="characteristic_car">
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-1.svg" alt="" class="char">
+							<div class="char-text">
+								Бензин
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-2.svg" alt="" class="char">
+							<div class="char-text">
+								Автомат
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-3.svg" alt="" class="char">
+							<div class="char-text">
+								Повний
+							</div>
+						</div>
+						<div class="char-prof">
+							<img src="static/img/auto_card/char-4.svg" alt="" class="char">
+							<div class="char-text">
+								2016
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn_car">
+						ДЕТАЛЬНІШЕ
+					</a>
+				</div>
+			</div>
+			<div class="more_slide_car">
+				<img src="static/img/auto_card/re-img.svg" alt="">
+				<div class="re-text">
+					ПОКАЗАТИ ЩЕ
+				</div>
+			</div>
+			<div class="footer_info-block">
+				<div class="footer_info-content">
+					<img src="static/img/footer/footer-logo.svg" alt="" class="footer-logo">
+					<div class="adress-block">
+						<div class="name-adress">
+							Наша адреса:
+						</div>
+						<div class="adress-prof">
+							<img src="static/img/footer/footer-nav.svg" alt="">
+							<a href="#" class="adress-text">
+								м. Тернопіль, площа  
+								Героїв Євромайдану, 6
+							</a>
+						</div>
+					</div>
+					<div class="adress-block">
+						<div class="name-adress">
+							Наші номери телефонів:
+						</div>
+						<div class="adress-prof">
+							<img src="static/img/footer/mob-1.svg" alt="">
+							<a href="tel:+38(097)968-64-83" class="adress-text">
+								+38 <b>(097)</b> 968-64-83
+							</a>
+						</div>
+						<div class="adress-prof adress-prof_link">
+							<img src="static/img/footer/mob-2.svg" alt="">
+							<a href="tel:+38(095)922-45-34" class="adress-text adress-text_link">
+								+38 <b>(095)</b> 922-45-34
+							</a>
+						</div>
+						
+					</div>
+					<div class="adress-block">
+						<div class="adress-prof adress-prof_mail">
+							<img src="static/img/footer/footer-mail.svg" alt="">
+							<a href="mailto:info@capitanavto.ua" class="adress-text">
+								info@capitanavto.ua
+							</a>
+						</div>
+					</div>
+					<div class="adress-block adress-block_soc">
+						<div class="name-adress">
+							Ми в соцмережах:
+						</div>
+						<div class="adress-prof adress-prof-soc">
+							<a href="#">
+								<img src="static/img/footer/footer-soc-1.svg" alt="">
+							</a>
+							<a href="#">
+								<img src="static/img/footer/footer-soc-2.svg" alt="">
+							</a>
+							<a href="#">
+								<img src="static/img/footer/footer-soc-3.svg" alt="">
+							</a>
+							
+						</div>
+					</div>
+				</div>
+				<div class="footer_info-img">
+					<img src="static/img/index/5.png" alt="">
+				</div>
+			</div>
 		</div>
 		<!-- /.container -->
 	</section>
 	<!-- /.auto_card -->
+	<footer class="footer">
+			<div class="footer-map">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2588.5978365615156!2d25.58940031558123!3d49.54874197936112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036b156b919fb%3A0xb5483b1f0d1fa5e8!2z0L_Qu9C-0YnQsCDQk9C10YDQvtGX0LIg0ITQstGA0L7QvNCw0LnQtNCw0L3RgywgNiwg0KLQtdGA0L3QvtC_0ZbQu9GMLCDQotC10YDQvdC-0L_RltC70YzRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgNDYwMDA!5e0!3m2!1sru!2sua!4v1580302702985!5m2!1sru!2sua" frameborder="0" style="border:0;" allowfullscreen="">
+				</iframe>
+			</div>
+		<!-- /.container -->
+		<div class="footer-wrap">
+			<div class="container">
+				<div class="main_footer-wrap">
+					<a href="index.html">
+						<img src="static/img/index/logo.svg" alt="" class="footer-main-logo">
+					</a>
+					<div class="last-footer_text">
+						© СapitаnAvto. <span class="med">Всі права захищено</span>
+					</div>
+					<div class="starway">
+						<a href="https://starwayua.com/">
+							<img src="static/img/footer/sw.svg" alt="">
+						</a>
+					</div>
+				</div>
+			</div>
+			<!-- /.container -->
+		</div>
+	</footer>
+	<!-- /.footer -->
 
 
 
