--- a/news-link.html
+++ b/news-link.html
@@ -173,14 +173,14 @@
 					</div>
 				</div>
 				<div class="bottom-navigate-block">
-					<a href="#" class="left_nav bottom_nav_style">
+					<a href="#" class="left_nav bottom_nav_style hvr-skew-left">
 						<img src="static/img/arrows.svg" alt="">
 						ПОПЕРЕДНЯ
 					</a>
-					<a href="#" class="center_nav bottom_nav_style">
+					<a href="#" class="center_nav bottom_nav_style hvr-wobble-skew">
 						НОВИНИ
 					</a>
-					<a href="#" class="right_nav bottom_nav_style">
+					<a href="#" class="right_nav bottom_nav_style hvr-skew-right">
 						НАСТУПНА
 						<img src="static/img/arrows.svg" alt="">
 					</a>
