--- a/card-car.html
+++ b/card-car.html
@@ -300,7 +300,7 @@
 					<img data-src="static/img/index/5.png" alt="">
 				</div>
 			</div>
-			<form action="" class="cmxform" id="modal-form_sale_car" style="display:none;">
+			<form action="" class="cmxform post_forms" id="modal-form_sale_car" style="display:none;">
 			
 				<div class="inp-vak-wrap">
 					<label class="label__style" for="name_car">Ваше і'мя</label class="label__style">
@@ -329,7 +329,7 @@
 	<!-- /.auto_card -->
 	<footer class="footer">
 		<form method="POST" action="" data-fancybox class="formA cmxform true_form" id="modal-form_true" style="display:none;">
-			<img class="form_true_img" src="/static/img/png-123.png" alt="">
+			<img class="form_true_img" src="static/img/png-123.png" alt="">
 			<div class="footer__sub">
 				Дякуємо, заявка опрацьована <br>
 				Наші менеджери звяжуться з вами
