--- a/news-link.html
+++ b/news-link.html
@@ -99,7 +99,7 @@
 								<div class="web-text">
 									ПОШИРИТИ
 								</div>
-								<img src="static/img/web.svg" alt="">
+								<img src="static/img/web.svg" class="sread_img" alt="">
 							</div>
 						</div>
 						<div class="news-subtext">
