--- a/news.html
+++ b/news.html
@@ -21,7 +21,7 @@
 		</a>
 		<div class="right_nav-bar">
 			<ul class="nav_block">
-				<a href="#calc__link" class="scroll_all">
+				<a href="#calc__link" class="scroll_all" id="calc__blink">
 					<button class="nav__link nav__text main-hvr" data-hover="Калькулятор">
 						<div>Калькулятор</div>
 					</button>
