--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
 			</div>
 			<div class="inp-vak-wrap">
 				<label class="label__style" for="tel_car">Ваш телефон</label>
-				<input name="tel_car" type="text" value="+3809667515**" maxlength="13" required>
+				<input name="tel_car" class="num_input" type="number" value="+3809667515**" maxlength="13" required>
 			</div>
 			<div class="error_block_false">
 				
@@ -1091,7 +1091,7 @@
 			</div>
 			<div class="inp-vak-wrap">
 				<label class="label__style" for="tel_car">Ваш телефон</label>
-				<input name="tel_car" type="text" required>
+				<input name="tel_car" class="num_input" type="number" required>
 			</div>
 			<div class="inp-vak-wrap">
 				<label class="label__style" for="mail_car">Email</label>
@@ -1114,7 +1114,7 @@
 			</div>
 			<div class="inp-vak-wrap">
 				<label class="label__style" for="tel_car">Ваш телефон</label>
-				<input name="tel_car" type="text" required>
+				<input name="tel_car" class="num_input" type="number" required>
 			</div>
 			<div class="inp-vak-wrap">
 				<label class="label__style" for="mail_car">Email</label>
